# quanted-assignment

./: CLAUDE.md  IMPROVEMENTS.md  README.md  download.py  find.py  manifest.json  pyproject.toml  session-notes.md
.claude/skills/vault-builder/: SKILL.md
raw/: code-yeongyu__oh-my-openagent.md  letta-ai__letta.md  microsoft__ai-agents-for-beginners.md
src/quanted_pipeline/: __init__.py  common.py  download.py  find.py
wiki/: 666ghj__MiroFish.md  ComposioHQ__awesome-claude-skills.md  DietrichGebert__ponytail.md  Mintplex-Labs__anything-llm.md  browser-use__browser-use.md  bytedance__deer-flow.md  code-yeongyu__oh-my-openagent.md  crewAIInc__crewAI.md  dair-ai__Prompt-Engineering-Guide.md  daytonaio__daytona.md  firecrawl__firecrawl.md  google-gemini__gemini-cli.md  index.md  infiniflow__ragflow.md  langchain-ai__langchain.md  letta-ai__letta.md  mem0ai__mem0.md  microsoft__ai-agents-for-beginners.md  microsoft__autogen.md  ruvnet__ruflo.md  shanraisshan__claude-code-best-practice.md  thedotmack__claude-mem.md
