[project]
name = "quanted-pipeline"
version = "0.1.0"
description = "GitHub discovery and README-download pipeline for the quanted-case AI-agent knowledge vault."
requires-python = ">=3.11"
dependencies = [
    "requests==2.32.5",
    "python-dotenv==1.1.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/quanted_pipeline"]
